<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <View
        android:id="@+id/layoutBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:elevation="@dimen/_5sdp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </View>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:elevation="@dimen/_5sdp"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageLogout"
        app:layout_constraintStart_toEndOf="@id/imageBack"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogout"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:elevation="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:src="@drawable/ic_logout"
        app:tint="@color/white"
        android:transitionName="logoutTransition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--<ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/layoutBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/layoutBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/profilePic"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:background="@drawable/user_profile_picture_white"
                    app:riv_oval="true"
                    android:transitionName="picTransition"
                    android:scaleType="centerCrop"/>
                <EditText
                    android:id="@+id/textName"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/background_input"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/user_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:textColor="@color/dim_grey"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:backgroundTint="@color/dim_grey"
                    app:cornerRadius="@dimen/_10sdp"
                    android:text="@string/save"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:background="@drawable/shape">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/achievements"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/all_this_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14sdp"
                        android:orientation="horizontal">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@drawable/coin"
                            app:riv_oval="true"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:id="@+id/numCoinsAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_6sdp"
                            android:text="0"
                            android:maxLength="10"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>